--- a/src/less/utilities/color-base.less
+++ b/src/less/utilities/color-base.less
@@ -8,70 +8,70 @@
 
     // background colors
 
-    .bg-attention-@{i} { background: ~"@{color-attention-@{i}}" !important; }
-    .bg-blue-@{i}      { background: ~"@{blue-@{i}}" !important; }
-    .bg-gray-@{i}      { background: ~"@{gray-@{i}}" !important; }
-    .bg-green-@{i}     { background: ~"@{green-@{i}}" !important; }
-    .bg-main-@{i}      { background: ~"@{color-main-@{i}}" !important; }
-    .bg-negative-@{i}  { background: ~"@{color-negative-@{i}}" !important; }
-    .bg-positive-@{i}  { background: ~"@{color-positive-@{i}}" !important; }
-    .bg-purple-@{i}    { background: ~"@{purple-@{i}}" !important; }
-    .bg-red-@{i}       { background: ~"@{red-@{i}}" !important; }
-    .bg-yellow-@{i}    { background: ~"@{yellow-@{i}}" !important; }
+    .@{utilityPrefix}bg-attention-@{i} { background: ~"@{color-attention-@{i}}" !important; }
+    .@{utilityPrefix}bg-blue-@{i}      { background: ~"@{blue-@{i}}" !important; }
+    .@{utilityPrefix}bg-gray-@{i}      { background: ~"@{gray-@{i}}" !important; }
+    .@{utilityPrefix}bg-green-@{i}     { background: ~"@{green-@{i}}" !important; }
+    .@{utilityPrefix}bg-main-@{i}      { background: ~"@{color-main-@{i}}" !important; }
+    .@{utilityPrefix}bg-negative-@{i}  { background: ~"@{color-negative-@{i}}" !important; }
+    .@{utilityPrefix}bg-positive-@{i}  { background: ~"@{color-positive-@{i}}" !important; }
+    .@{utilityPrefix}bg-purple-@{i}    { background: ~"@{purple-@{i}}" !important; }
+    .@{utilityPrefix}bg-red-@{i}       { background: ~"@{red-@{i}}" !important; }
+    .@{utilityPrefix}bg-yellow-@{i}    { background: ~"@{yellow-@{i}}" !important; }
 
     // border colors
 
-    .bc-attention-@{i} { border-color: ~"@{color-attention-@{i}}" !important; }
-    .bc-blue-@{i}      { border-color: ~"@{blue-@{i}}" !important; }
-    .bc-gray-@{i}      { border-color: ~"@{gray-@{i}}" !important; }
-    .bc-green-@{i}     { border-color: ~"@{green-@{i}}" !important; }
-    .bc-main-@{i}      { border-color: ~"@{color-main-@{i}}" !important; }
-    .bc-negative-@{i}  { border-color: ~"@{color-negative-@{i}}" !important; }
-    .bc-positive-@{i}  { border-color: ~"@{color-positive-@{i}}" !important; }
-    .bc-purple-@{i}    { border-color: ~"@{purple-@{i}}" !important; }
-    .bc-red-@{i}       { border-color: ~"@{red-@{i}}" !important; }
-    .bc-yellow-@{i}    { border-color: ~"@{yellow-@{i}}" !important; }
+    .@{utilityPrefix}bc-attention-@{i} { border-color: ~"@{color-attention-@{i}}" !important; }
+    .@{utilityPrefix}bc-blue-@{i}      { border-color: ~"@{blue-@{i}}" !important; }
+    .@{utilityPrefix}bc-gray-@{i}      { border-color: ~"@{gray-@{i}}" !important; }
+    .@{utilityPrefix}bc-green-@{i}     { border-color: ~"@{green-@{i}}" !important; }
+    .@{utilityPrefix}bc-main-@{i}      { border-color: ~"@{color-main-@{i}}" !important; }
+    .@{utilityPrefix}bc-negative-@{i}  { border-color: ~"@{color-negative-@{i}}" !important; }
+    .@{utilityPrefix}bc-positive-@{i}  { border-color: ~"@{color-positive-@{i}}" !important; }
+    .@{utilityPrefix}bc-purple-@{i}    { border-color: ~"@{purple-@{i}}" !important; }
+    .@{utilityPrefix}bc-red-@{i}       { border-color: ~"@{red-@{i}}" !important; }
+    .@{utilityPrefix}bc-yellow-@{i}    { border-color: ~"@{yellow-@{i}}" !important; }
 
     // text colors
 
-    .tc-attention-@{i} { color: ~"@{color-attention-@{i}}" !important; }
-    .tc-blue-@{i}      { color: ~"@{blue-@{i}}" !important; }
-    .tc-gray-@{i}      { color: ~"@{gray-@{i}}" !important; }
-    .tc-green-@{i}     { color: ~"@{green-@{i}}" !important; }
-    .tc-main-@{i}      { color: ~"@{color-main-@{i}}" !important; }
-    .tc-negative-@{i}  { color: ~"@{color-negative-@{i}}" !important; }
-    .tc-positive-@{i}  { color: ~"@{color-positive-@{i}}" !important; }
-    .tc-purple-@{i}    { color: ~"@{purple-@{i}}" !important; }
-    .tc-red-@{i}       { color: ~"@{red-@{i}}" !important; }
-    .tc-yellow-@{i}    { color: ~"@{yellow-@{i}}" !important; }
+    .@{utilityPrefix}tc-attention-@{i} { color: ~"@{color-attention-@{i}}" !important; }
+    .@{utilityPrefix}tc-blue-@{i}      { color: ~"@{blue-@{i}}" !important; }
+    .@{utilityPrefix}tc-gray-@{i}      { color: ~"@{gray-@{i}}" !important; }
+    .@{utilityPrefix}tc-green-@{i}     { color: ~"@{green-@{i}}" !important; }
+    .@{utilityPrefix}tc-main-@{i}      { color: ~"@{color-main-@{i}}" !important; }
+    .@{utilityPrefix}tc-negative-@{i}  { color: ~"@{color-negative-@{i}}" !important; }
+    .@{utilityPrefix}tc-positive-@{i}  { color: ~"@{color-positive-@{i}}" !important; }
+    .@{utilityPrefix}tc-purple-@{i}    { color: ~"@{purple-@{i}}" !important; }
+    .@{utilityPrefix}tc-red-@{i}       { color: ~"@{red-@{i}}" !important; }
+    .@{utilityPrefix}tc-yellow-@{i}    { color: ~"@{yellow-@{i}}" !important; }
 
 }
 .generate_colors(25);
 
 // background colors
 
-.bg-transparent { background: @color-transparent !important; }
-.bg-white       { background: @color-white !important; }
+.@{utilityPrefix}bg-transparent { background: @color-transparent !important; }
+.@{utilityPrefix}bg-white       { background: @color-white !important; }
 
 // border colors
 
-.bc-transparent { border-color: @color-transparent !important; }
-.bc-white       { border-color: @color-white !important; }
+.@{utilityPrefix}bc-transparent { border-color: @color-transparent !important; }
+.@{utilityPrefix}bc-white       { border-color: @color-white !important; }
 
 // text colors
 
-.tc-transparent { color: @color-transparent !important; }
-.tc-white       { color: @color-white !important; }
+.@{utilityPrefix}tc-transparent { color: @color-transparent !important; }
+.@{utilityPrefix}tc-white       { color: @color-white !important; }
 
 // semantic text colors
 
-.tc-attention             { color: @color-attention-8 !important; }
-.tc-error, .tc-negative   { color: @color-negative-15 !important; }
-.tc-gold                  { color: @color-gold !important; }
-.tc-success, .tc-positive { color: @color-positive-15 !important; }
-.tc-white                 { color: @color-white !important; }
+.@{utilityPrefix}tc-attention             { color: @color-attention-8 !important; }
+.@{utilityPrefix}tc-error, .tc-negative   { color: @color-negative-15 !important; }
+.@{utilityPrefix}tc-gold                  { color: @color-gold !important; }
+.@{utilityPrefix}tc-success, .tc-positive { color: @color-positive-15 !important; }
+.@{utilityPrefix}tc-white                 { color: @color-white !important; }
 
 // semantic border colors
 
-.bc-transparent { border-color: @color-transparent !important; }
-.bc-white       { border-color: @color-white !important; }
+.@{utilityPrefix}bc-transparent { border-color: @color-transparent !important; }
+.@{utilityPrefix}bc-white       { border-color: @color-white !important; }
