--- a/src/less/utilities/color-interactive.less
+++ b/src/less/utilities/color-interactive.less
@@ -5,51 +5,51 @@
 
     // background colors
 
-    .hvr--bg-attention-@{i}:hover { background: ~"@{color-attention-@{i}}" !important; }
-    .hvr--bg-blue-@{i}:hover      { background: ~"@{blue-@{i}}" !important; }
-    .hvr--bg-gray-@{i}:hover      { background: ~"@{gray-@{i}}" !important; }
-    .hvr--bg-green-@{i}:hover     { background: ~"@{green-@{i}}" !important; }
-    .hvr--bg-main-@{i}:hover      { background: ~"@{color-main-@{i}}" !important; }
-    .hvr--bg-negative-@{i}:hover  { background: ~"@{color-negative-@{i}}" !important; }
-    .hvr--bg-positive-@{i}:hover  { background: ~"@{color-positive-@{i}}" !important; }
-    .hvr--bg-purple-@{i}:hover    { background: ~"@{purple-@{i}}" !important; }
-    .hvr--bg-red-@{i}:hover       { background: ~"@{red-@{i}}" !important; }
-    .hvr--bg-yellow-@{i}:hover    { background: ~"@{yellow-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bg-attention-@{i}:hover { background: ~"@{color-attention-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bg-blue-@{i}:hover      { background: ~"@{blue-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bg-gray-@{i}:hover      { background: ~"@{gray-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bg-green-@{i}:hover     { background: ~"@{green-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bg-main-@{i}:hover      { background: ~"@{color-main-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bg-negative-@{i}:hover  { background: ~"@{color-negative-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bg-positive-@{i}:hover  { background: ~"@{color-positive-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bg-purple-@{i}:hover    { background: ~"@{purple-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bg-red-@{i}:hover       { background: ~"@{red-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bg-yellow-@{i}:hover    { background: ~"@{yellow-@{i}}" !important; }
 
     // text colors
 
-    .hvr--tc-attention-@{i}:hover { color: ~"@{color-attention-@{i}}" !important; }
-    .hvr--tc-blue-@{i}:hover      { color: ~"@{blue-@{i}}" !important; }
-    .hvr--tc-gray-@{i}:hover      { color: ~"@{gray-@{i}}" !important; }
-    .hvr--tc-green-@{i}:hover     { color: ~"@{green-@{i}}" !important; }
-    .hvr--tc-main-@{i}:hover      { color: ~"@{color-main-@{i}}" !important; }
-    .hvr--tc-negative-@{i}:hover  { color: ~"@{color-negative-@{i}}" !important; }
-    .hvr--tc-positive-@{i}:hover  { color: ~"@{color-positive-@{i}}" !important; }
-    .hvr--tc-purple-@{i}:hover    { color: ~"@{purple-@{i}}" !important; }
-    .hvr--tc-red-@{i}:hover       { color: ~"@{red-@{i}}" !important; }
-    .hvr--tc-yellow-@{i}:hover    { color: ~"@{yellow-@{i}}" !important; }
+    .@{utilityPrefix}hvr--tc-attention-@{i}:hover { color: ~"@{color-attention-@{i}}" !important; }
+    .@{utilityPrefix}hvr--tc-blue-@{i}:hover      { color: ~"@{blue-@{i}}" !important; }
+    .@{utilityPrefix}hvr--tc-gray-@{i}:hover      { color: ~"@{gray-@{i}}" !important; }
+    .@{utilityPrefix}hvr--tc-green-@{i}:hover     { color: ~"@{green-@{i}}" !important; }
+    .@{utilityPrefix}hvr--tc-main-@{i}:hover      { color: ~"@{color-main-@{i}}" !important; }
+    .@{utilityPrefix}hvr--tc-negative-@{i}:hover  { color: ~"@{color-negative-@{i}}" !important; }
+    .@{utilityPrefix}hvr--tc-positive-@{i}:hover  { color: ~"@{color-positive-@{i}}" !important; }
+    .@{utilityPrefix}hvr--tc-purple-@{i}:hover    { color: ~"@{purple-@{i}}" !important; }
+    .@{utilityPrefix}hvr--tc-red-@{i}:hover       { color: ~"@{red-@{i}}" !important; }
+    .@{utilityPrefix}hvr--tc-yellow-@{i}:hover    { color: ~"@{yellow-@{i}}" !important; }
 
     // border colors
 
-    .hvr--bc-attention-@{i}:hover { border-color: ~"@{color-attention-@{i}}" !important; }
-    .hvr--bc-blue-@{i}:hover      { border-color: ~"@{blue-@{i}}" !important; }
-    .hvr--bc-gray-@{i}:hover      { border-color: ~"@{gray-@{i}}" !important; }
-    .hvr--bc-green-@{i}:hover     { border-color: ~"@{green-@{i}}" !important; }
-    .hvr--bc-main-@{i}:hover      { border-color: ~"@{color-main-@{i}}" !important; }
-    .hvr--bc-negative-@{i}:hover  { border-color: ~"@{color-negative-@{i}}" !important; }
-    .hvr--bc-positive-@{i}:hover  { border-color: ~"@{color-positive-@{i}}" !important; }
-    .hvr--bc-purple-@{i}:hover    { border-color: ~"@{purple-@{i}}" !important; }
-    .hvr--bc-red-@{i}:hover       { border-color: ~"@{red-@{i}}" !important; }
-    .hvr--bc-yellow-@{i}:hover    { border-color: ~"@{yellow-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bc-attention-@{i}:hover { border-color: ~"@{color-attention-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bc-blue-@{i}:hover      { border-color: ~"@{blue-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bc-gray-@{i}:hover      { border-color: ~"@{gray-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bc-green-@{i}:hover     { border-color: ~"@{green-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bc-main-@{i}:hover      { border-color: ~"@{color-main-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bc-negative-@{i}:hover  { border-color: ~"@{color-negative-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bc-positive-@{i}:hover  { border-color: ~"@{color-positive-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bc-purple-@{i}:hover    { border-color: ~"@{purple-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bc-red-@{i}:hover       { border-color: ~"@{red-@{i}}" !important; }
+    .@{utilityPrefix}hvr--bc-yellow-@{i}:hover    { border-color: ~"@{yellow-@{i}}" !important; }
 
 }
 .generate_hvrStyles(25);
 
-.hvr--bg-transparent:hover { background: @color-transparent !important; }
-.hvr--bg-white:hover       { background: @color-white !important; }
+.@{utilityPrefix}hvr--bg-transparent:hover { background: @color-transparent !important; }
+.@{utilityPrefix}hvr--bg-white:hover       { background: @color-white !important; }
 
-.hvr--tc-transparent:hover { color: @color-transparent !important; }
-.hvr--tc-white:hover       { color: @color-white !important; }
+.@{utilityPrefix}hvr--tc-transparent:hover { color: @color-transparent !important; }
+.@{utilityPrefix}hvr--tc-white:hover       { color: @color-white !important; }
 
-.hvr--bc-transparent:hover { border-color: @color-transparent !important; }
-.hvr--bc-white:hover       { border-color: @color-white !important; }
+.@{utilityPrefix}hvr--bc-transparent:hover { border-color: @color-transparent !important; }
+.@{utilityPrefix}hvr--bc-white:hover       { border-color: @color-white !important; }
