--- a/src/less/utilities/cursor.less
+++ b/src/less/utilities/cursor.less
@@ -1,37 +1,37 @@
 /** cursor */
 
-.crsr-alias   { cursor: alias !important; }
-.crsr-ascrl   { cursor: all-scroll !important; }
-.crsr-auto    { cursor: auto !important; }
-.crsr-cell    { cursor: cell !important; }
-.crsr-cntxt   { cursor: context-menu !important; }
-.crsr-copy    { cursor: copy !important; }
-.crsr-crshr   { cursor: crosshair !important; }
-.crsr-deflt   { cursor: default !important; }
-.crsr-ersz    { cursor: e-resize !important; }
-.crsr-ewrsz   { cursor: ew-resize !important; }
-.crsr-gbng    { cursor: grabbing !important; }
-.crsr-grab    { cursor: grab !important; }
-.crsr-move    { cursor: move !important; }
-.crsr-nalwd   { cursor: not-allowed !important; }
-.crsr-ndrp    { cursor: no-drop !important; }
-.crsr-nersz   { cursor: ne-resize !important; }
-.crsr-neswrsz { cursor: nesw-resize !important; }
-.crsr-none    { cursor: none !important; }
-.crsr-nrsz    { cursor: n-resize !important; }
-.crsr-nsrsz   { cursor: ns-resize !important; }
-.crsr-nwrsz   { cursor: nw-resize !important; }
-.crsr-nwsersz { cursor: nwse-resize !important; }
-.crsr-pntr    { cursor: pointer !important; }
-.crsr-prgrs   { cursor: progress !important; }
-.crsr-rsz     { cursor: resize !important; }
-.crsr-rwrsz   { cursor: row-resize !important; }
-.crsr-sersz   { cursor: se-resize !important; }
-.crsr-srsz    { cursor: s-resize !important; }
-.crsr-swrsz   { cursor: sw-resize !important; }
-.crsr-txt     { cursor: text !important; }
-.crsr-vtxt    { cursor: vertical-text !important; }
-.crsr-wait    { cursor: wait !important; }
-.crsr-wrsz    { cursor: w-resize !important; }
-.crsr-zmin    { cursor: zoom-in !important; }
-.crsr-zmot    { cursor: zoom-out !important; }
+.@{utilityPrefix}crsr-alias   { cursor: alias !important; }
+.@{utilityPrefix}crsr-ascrl   { cursor: all-scroll !important; }
+.@{utilityPrefix}crsr-auto    { cursor: auto !important; }
+.@{utilityPrefix}crsr-cell    { cursor: cell !important; }
+.@{utilityPrefix}crsr-cntxt   { cursor: context-menu !important; }
+.@{utilityPrefix}crsr-copy    { cursor: copy !important; }
+.@{utilityPrefix}crsr-crshr   { cursor: crosshair !important; }
+.@{utilityPrefix}crsr-deflt   { cursor: default !important; }
+.@{utilityPrefix}crsr-ersz    { cursor: e-resize !important; }
+.@{utilityPrefix}crsr-ewrsz   { cursor: ew-resize !important; }
+.@{utilityPrefix}crsr-gbng    { cursor: grabbing !important; }
+.@{utilityPrefix}crsr-grab    { cursor: grab !important; }
+.@{utilityPrefix}crsr-move    { cursor: move !important; }
+.@{utilityPrefix}crsr-nalwd   { cursor: not-allowed !important; }
+.@{utilityPrefix}crsr-ndrp    { cursor: no-drop !important; }
+.@{utilityPrefix}crsr-nersz   { cursor: ne-resize !important; }
+.@{utilityPrefix}crsr-neswrsz { cursor: nesw-resize !important; }
+.@{utilityPrefix}crsr-none    { cursor: none !important; }
+.@{utilityPrefix}crsr-nrsz    { cursor: n-resize !important; }
+.@{utilityPrefix}crsr-nsrsz   { cursor: ns-resize !important; }
+.@{utilityPrefix}crsr-nwrsz   { cursor: nw-resize !important; }
+.@{utilityPrefix}crsr-nwsersz { cursor: nwse-resize !important; }
+.@{utilityPrefix}crsr-pntr    { cursor: pointer !important; }
+.@{utilityPrefix}crsr-prgrs   { cursor: progress !important; }
+.@{utilityPrefix}crsr-rsz     { cursor: resize !important; }
+.@{utilityPrefix}crsr-rwrsz   { cursor: row-resize !important; }
+.@{utilityPrefix}crsr-sersz   { cursor: se-resize !important; }
+.@{utilityPrefix}crsr-srsz    { cursor: s-resize !important; }
+.@{utilityPrefix}crsr-swrsz   { cursor: sw-resize !important; }
+.@{utilityPrefix}crsr-txt     { cursor: text !important; }
+.@{utilityPrefix}crsr-vtxt    { cursor: vertical-text !important; }
+.@{utilityPrefix}crsr-wait    { cursor: wait !important; }
+.@{utilityPrefix}crsr-wrsz    { cursor: w-resize !important; }
+.@{utilityPrefix}crsr-zmin    { cursor: zoom-in !important; }
+.@{utilityPrefix}crsr-zmot    { cursor: zoom-out !important; }
