--- a/src/less/utilities/jsfallback.less
+++ b/src/less/utilities/jsfallback.less
@@ -1,4 +1,4 @@
 /** jsfallback.less */
 
-.js   .js-fallback { display: none !important; }
-.noJs .js-only     { display: none !important; }
+.@{utilityPrefix}js   .@{utilityPrefix}js-fallback { display: none !important; }
+.@{utilityPrefix}noJs .@{utilityPrefix}js-only     { display: none !important; }
