--- a/src/less/utilities/shadow-base.less
+++ b/src/less/utilities/shadow-base.less
@@ -9,16 +9,16 @@
 
 // box shadows
 
-.sh-0 { box-shadow: 0 !important; }
-.sh-1 { .mixin-shadow-1 !important; }
-.sh-2 { .mixin-shadow-2 !important; }
-.sh-3 { .mixin-shadow-3 !important; }
-.sh-4 { .mixin-shadow-4 !important; }
+.@{utilityPrefix}sh-0 { box-shadow: 0 !important; }
+.@{utilityPrefix}sh-1 { .mixin-shadow-1 !important; }
+.@{utilityPrefix}sh-2 { .mixin-shadow-2 !important; }
+.@{utilityPrefix}sh-3 { .mixin-shadow-3 !important; }
+.@{utilityPrefix}sh-4 { .mixin-shadow-4 !important; }
 
 // text shadows
 
-.tsh-0 { text-shadow: none !important; }
-.tsh-1 { text-shadow: 0 1px 0 fade(@color-main-5,30%) !important; }
-.tsh-2 { text-shadow: 0 1px 0 fade(@color-main-5,50%) !important; }
-.tsh-3 { text-shadow: 0 1px 3px fade(@color-main-5,70%) !important; }
-.tsh-4 { text-shadow: 0 2px 5px fade(@color-main-5,50%) !important; }
+.@{utilityPrefix}tsh-0 { text-shadow: none !important; }
+.@{utilityPrefix}tsh-1 { text-shadow: 0 1px 0 fade(@color-main-5,30%) !important; }
+.@{utilityPrefix}tsh-2 { text-shadow: 0 1px 0 fade(@color-main-5,50%) !important; }
+.@{utilityPrefix}tsh-3 { text-shadow: 0 1px 3px fade(@color-main-5,70%) !important; }
+.@{utilityPrefix}tsh-4 { text-shadow: 0 2px 5px fade(@color-main-5,50%) !important; }
