--- a/src/less/utilities/shadow-interactive.less
+++ b/src/less/utilities/shadow-interactive.less
@@ -1,7 +1,7 @@
 /** shadow-interactive.less */
 
-.hvr--sh-1:hover    { .mixin-shadow-1 !important; }
-.hvr--sh-2:hover    { .mixin-shadow-2 !important; }
-.hvr--sh-3:hover    { .mixin-shadow-3 !important; }
-.hvr--sh-4:hover    { .mixin-shadow-4 !important; }
-.hvr--sh-none:hover { box-shadow: none !important; }
+.@{utilityPrefix}hvr--sh-1:hover    { .mixin-shadow-1 !important; }
+.@{utilityPrefix}hvr--sh-2:hover    { .mixin-shadow-2 !important; }
+.@{utilityPrefix}hvr--sh-3:hover    { .mixin-shadow-3 !important; }
+.@{utilityPrefix}hvr--sh-4:hover    { .mixin-shadow-4 !important; }
+.@{utilityPrefix}hvr--sh-none:hover { box-shadow: none !important; }
