--- a/src/less/utilities/visibility-responsive.less
+++ b/src/less/utilities/visibility-responsive.less
@@ -2,18 +2,18 @@
 
 // small
 
-@media @bp-only-s { .only-s--hidden { .mixin-hide !important; } }
+@media @bp-only-s { .@{utilityPrefix}only-s--hidden { .mixin-hide !important; } }
 
 // medium
 
-@media @bp-m { .m--hidden { .mixin-hide !important; } }
-@media @bp-only-m { .only-m--hidden { .mixin-hide !important; } }
+@media @bp-m { .@{utilityPrefix}m--hidden { .mixin-hide !important; } }
+@media @bp-only-m { .@{utilityPrefix}only-m--hidden { .mixin-hide !important; } }
 
 // large
 
-@media @bp-l { .l--hidden { .mixin-hide !important; } }
-@media @bp-only-l { .only-l--hidden { .mixin-hide !important; } }
+@media @bp-l { .@{utilityPrefix}l--hidden { .mixin-hide !important; } }
+@media @bp-only-l { .@{utilityPrefix}only-l--hidden { .mixin-hide !important; } }
 
 // x-large
 
-@media @bp-xl { .xl--hidden { .mixin-hide !important; } }
+@media @bp-xl { .@{utilityPrefix}xl--hidden { .mixin-hide !important; } }
