--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -24,19 +24,19 @@
     <body class="noJs" yoi-environment="desktop" {{ pageRewind }} {{ scrollKeys }} {{ scrollProgress }} >
         <script>document.body.className='js';</script>
         <div class="center flexGrid p-tb-2 l--m-b-8">
-            <div class="w-1-4 m--w-2-3 flex-alignStart">
+            <div class="w-1-5 m--w-2-3 flex-alignStart">
                 <a href="{{ site.github.url }}/">
                     <img class="h-4 m--h-6 m-tb-1 m--m-tb-2" src="{{ site.github.url }}/assets/img/yoi-logo.svg" />
                 </a>
             </div>
-            <div class="w-3-4 m--w-1-3 flex-alignEnd">
+            <div class="w-4-5 m--w-1-3 flex-alignEnd">
                 <div class="m-t-1">
                     <a href="https://github.com/yoshino-digital/yoi/" class="btn btn--medium btn--subtle">GitHub</a>
                     <a href="https://github.com/yoshino-digital/yoi/releases/latest" class="btn btn--medium btn--subtle">
                         <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-071-s" yoi-icon />
                         <span>Download</span>
                     </a>
-                    <a href="#menu" class="btn btn--medium btn--flat btn--dark m-l-2 l--hidden" yoi-action="ScrollTo:#menu;">
+                    <a href="#menu" class="btn btn--medium btn--dark btn--flat m-l-2 l--hidden" yoi-action="ScrollTo:#menu;">
                         <span class="hidden">Menu</span>
                         <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-067-s" yoi-icon />
                     </a>
@@ -45,11 +45,11 @@
         </div>
         <div class="center flexGrid">
             <nav id="menu" class="w-1-1 l--w-1-5 m-t-9 flex-2 l--flex-1">
-                {% include menu-main.html %}
+                {% include menu.html %}
             </nav>
             <article class="article w-1-1 l--w-4-5 l--p-l-10 flex-1 l--flex-2">
                 {{ content }}
-                {% include footer-meta.html %}
+                {% include pagefooter.html %}
             </article>
         </div>
         <footer class="center flexGrid tc-gray-18 m-tb-15">
