--- a/src/less/utilities/gradient.less
+++ b/src/less/utilities/gradient.less
@@ -1,9 +1,9 @@
 /** gradient.less */
 
-.gradient-t::after,
-.gradient-r::after,
-.gradient-b::after,
-.gradient-l::after {
+.@{utilityPrefix}gradient-t::after,
+.@{utilityPrefix}gradient-r::after,
+.@{utilityPrefix}gradient-b::after,
+.@{utilityPrefix}gradient-l::after {
     bottom: 0;
     content: ' ';
     height: 100%;
@@ -15,7 +15,7 @@
     z-index: 1;
 }
 
-.gradient-t::after { background: linear-gradient(fade(@color-main-5, 30%), @color-transparent); }
-.gradient-r::after { background: linear-gradient(270deg, fade(@color-main-5, 30%), @color-transparent); }
-.gradient-b::after { background: linear-gradient(@color-transparent, fade(@color-main-5, 30%)); }
-.gradient-l::after { background: linear-gradient(90deg, fade(@color-main-5, 30%), @color-transparent); }
+.@{utilityPrefix}gradient-t::after { background: linear-gradient(fade(@color-main-5, 30%), @color-transparent); }
+.@{utilityPrefix}gradient-r::after { background: linear-gradient(270deg, fade(@color-main-5, 30%), @color-transparent); }
+.@{utilityPrefix}gradient-b::after { background: linear-gradient(@color-transparent, fade(@color-main-5, 30%)); }
+.@{utilityPrefix}gradient-l::after { background: linear-gradient(90deg, fade(@color-main-5, 30%), @color-transparent); }
