--- a/src/less/utilities/sizing-responsive.less
+++ b/src/less/utilities/sizing-responsive.less
@@ -2,47 +2,47 @@
 
 // "contructor"
 
-.responsive-sizing(@prefix) {
+.responsive-sizing(@bpPrefix) {
 
     // fractional width
 
-    .@{prefix}--w-1-1,
-    .@{prefix}--w-1-2,
-    .@{prefix}--w-1-3,
-    .@{prefix}--w-1-4,
-    .@{prefix}--w-1-5,
-    .@{prefix}--w-1-6,
-    .@{prefix}--w-2-3,
-    .@{prefix}--w-2-5,
-    .@{prefix}--w-3-4,
-    .@{prefix}--w-3-5,
-    .@{prefix}--w-4-5,
-    .@{prefix}--w-auto {
+    .@{utilityPrefix}@{bpPrefix}--w-1-1,
+    .@{utilityPrefix}@{bpPrefix}--w-1-2,
+    .@{utilityPrefix}@{bpPrefix}--w-1-3,
+    .@{utilityPrefix}@{bpPrefix}--w-1-4,
+    .@{utilityPrefix}@{bpPrefix}--w-1-5,
+    .@{utilityPrefix}@{bpPrefix}--w-1-6,
+    .@{utilityPrefix}@{bpPrefix}--w-2-3,
+    .@{utilityPrefix}@{bpPrefix}--w-2-5,
+    .@{utilityPrefix}@{bpPrefix}--w-3-4,
+    .@{utilityPrefix}@{bpPrefix}--w-3-5,
+    .@{utilityPrefix}@{bpPrefix}--w-4-5,
+    .@{utilityPrefix}@{bpPrefix}--w-auto {
         box-sizing: border-box !important;
     }
 
-    .@{prefix}--w-1-1 { width: 100% !important; }
-    .@{prefix}--w-1-2 { width: 50% !important; }
-    .@{prefix}--w-1-3 { width: 33.33% !important; }
-    .@{prefix}--w-1-4 { width: 25% !important; }
-    .@{prefix}--w-1-5 { width: 20% !important; }
-    .@{prefix}--w-1-6 { width: 16.67% !important; }
-    .@{prefix}--w-2-3 { width: 66.67% !important; }
-    .@{prefix}--w-2-5 { width: 40% !important; }
-    .@{prefix}--w-3-4 { width: 75% !important; }
-    .@{prefix}--w-3-5 { width: 60% !important; }
-    .@{prefix}--w-4-5 { width: 80% !important; }
+    .@{utilityPrefix}@{bpPrefix}--w-1-1 { width: 100% !important; }
+    .@{utilityPrefix}@{bpPrefix}--w-1-2 { width: 50% !important; }
+    .@{utilityPrefix}@{bpPrefix}--w-1-3 { width: 33.33% !important; }
+    .@{utilityPrefix}@{bpPrefix}--w-1-4 { width: 25% !important; }
+    .@{utilityPrefix}@{bpPrefix}--w-1-5 { width: 20% !important; }
+    .@{utilityPrefix}@{bpPrefix}--w-1-6 { width: 16.67% !important; }
+    .@{utilityPrefix}@{bpPrefix}--w-2-3 { width: 66.67% !important; }
+    .@{utilityPrefix}@{bpPrefix}--w-2-5 { width: 40% !important; }
+    .@{utilityPrefix}@{bpPrefix}--w-3-4 { width: 75% !important; }
+    .@{utilityPrefix}@{bpPrefix}--w-3-5 { width: 60% !important; }
+    .@{utilityPrefix}@{bpPrefix}--w-4-5 { width: 80% !important; }
 
     // auto width
 
-    .@{prefix}--w-auto { width: auto !important; }
+    .@{utilityPrefix}@{bpPrefix}--w-auto { width: auto !important; }
 
     // fixed width & height
 
     .generate_width_height (@i) when (@i > 0) {
         .generate_width_height((@i - 1));
-        .@{prefix}--w-@{i} { width:  1rem * @i !important; }
-        .@{prefix}--h-@{i} { height: 1rem * @i !important; }
+        .@{utilityPrefix}@{bpPrefix}--w-@{i} { width:  1rem * @i !important; }
+        .@{utilityPrefix}@{bpPrefix}--h-@{i} { height: 1rem * @i !important; }
     }
     .generate_width_height(@responsiveSizingSteps);
 
