--- a/src/less/utilities/typography-responsive.less
+++ b/src/less/utilities/typography-responsive.less
@@ -2,43 +2,43 @@
 
 // "constructor"
 
-.responsive-typography(@prefix) {
-    
+.responsive-typography(@bpPrefix) {
+
     // font-size
 
-    .@{prefix}--fs-0 { .fs-0; }
-    .@{prefix}--fs-1 { .fs-1; }
-    .@{prefix}--fs-2 { .fs-2; }
-    .@{prefix}--fs-3 { .fs-3; }
-    .@{prefix}--fs-4 { .fs-4; }
-    .@{prefix}--fs-5 { .fs-5; }
-    .@{prefix}--fs-6 { .fs-6; }
-    .@{prefix}--fs-7 { .fs-7; }
-    .@{prefix}--fs-8 { .fs-8; }
-    .@{prefix}--fs-9 { .fs-9; }
+    .@{utilityPrefix}@{bpPrefix}--fs-0 { @fs-0(); }
+    .@{utilityPrefix}@{bpPrefix}--fs-1 { @fs-1(); }
+    .@{utilityPrefix}@{bpPrefix}--fs-2 { @fs-2(); }
+    .@{utilityPrefix}@{bpPrefix}--fs-3 { @fs-3(); }
+    .@{utilityPrefix}@{bpPrefix}--fs-4 { @fs-4(); }
+    .@{utilityPrefix}@{bpPrefix}--fs-5 { @fs-5(); }
+    .@{utilityPrefix}@{bpPrefix}--fs-6 { @fs-6(); }
+    .@{utilityPrefix}@{bpPrefix}--fs-7 { @fs-7(); }
+    .@{utilityPrefix}@{bpPrefix}--fs-8 { @fs-8(); }
+    .@{utilityPrefix}@{bpPrefix}--fs-9 { @fs-9(); }
 
     // line-height
 
-    .@{prefix}--lh-0 { .lh-0; }
-    .@{prefix}--lh-1 { .lh-1; }
-    .@{prefix}--lh-2 { .lh-2; }
-    .@{prefix}--lh-3 { .lh-3; }
-    .@{prefix}--lh-4 { .lh-4; }
-    .@{prefix}--lh-5 { .lh-5; }
-    .@{prefix}--lh-6 { .lh-6; }
-    .@{prefix}--lh-7 { .lh-7; }
-    .@{prefix}--lh-8 { .lh-8; }
-    .@{prefix}--lh-9 { .lh-9; }
+    .@{utilityPrefix}@{bpPrefix}--lh-0 { @lh-0(); }
+    .@{utilityPrefix}@{bpPrefix}--lh-1 { @lh-1(); }
+    .@{utilityPrefix}@{bpPrefix}--lh-2 { @lh-2(); }
+    .@{utilityPrefix}@{bpPrefix}--lh-3 { @lh-3(); }
+    .@{utilityPrefix}@{bpPrefix}--lh-4 { @lh-4(); }
+    .@{utilityPrefix}@{bpPrefix}--lh-5 { @lh-5(); }
+    .@{utilityPrefix}@{bpPrefix}--lh-6 { @lh-6(); }
+    .@{utilityPrefix}@{bpPrefix}--lh-7 { @lh-7(); }
+    .@{utilityPrefix}@{bpPrefix}--lh-8 { @lh-8(); }
+    .@{utilityPrefix}@{bpPrefix}--lh-9 { @lh-9(); }
 
     // text alignment
 
-    .@{prefix}--al-r { .al-r; }
-    .@{prefix}--al-l { .al-l; }
-    .@{prefix}--al-c { .al-c; }
+    .@{utilityPrefix}@{bpPrefix}--al-r { @al-r(); }
+    .@{utilityPrefix}@{bpPrefix}--al-l { @al-l(); }
+    .@{utilityPrefix}@{bpPrefix}--al-c { @al-c(); }
 
     // line-break
 
-    .@{prefix}--lbr-none { .lbr-none; }
+    .@{utilityPrefix}@{bpPrefix}--lbr-none { @lbr-none(); }
 
 }
 
